--- a/index.mdx
+++ b/index.mdx
@@ -85,6 +85,14 @@ DirectoryEasy is a powerful platform that helps you create, manage, and monetize
   </Card>
 
   <Card
+    title="Miscellaneous Settings"
+    icon="sliders"
+    href="/pages/miscellaneous-settings"
+  >
+    Configure general options, features, and listing display settings.
+  </Card>
+
+  <Card
     title="Coming Soon"
     icon="sparkles"
     href="/pages/coming-soon"
